--- a/PHSXlab_plotting_template.ipynb
+++ b/PHSXlab_plotting_template.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -17,7 +18,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/brianna-phsx/plotting-templates/blob/main/PHSXlab_plotting_template.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -25,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -151,16 +153,16 @@
         "\n",
         "plt.errorbar(x, y, yerr=dy, xerr=None, fmt=\"none\") #don't need to plot x error bars\n",
         "\n",
-        "plt.annotate('Slope ({}) = {value:.{digits}E}'.format(slope_units,value=m, digits=2),\n",
+        "plt.annotate('Slope ({}) = {value:.{digits}E}'.format(slope_units,value=m, digits=3),\n",
         "             (xpos, ypos[0]), xycoords='axes fraction')\n",
         "\n",
-        "plt.annotate('Error in Slope ({}) = {value:.{digits}E}'.format(slope_units,value=dm, digits=1),\n",
+        "plt.annotate('Error in Slope ({}) = {value:.{digits}E}'.format(slope_units,value=dm, digits=3),\n",
         "             (xpos, ypos[1]), xycoords='axes fraction')\n",
         "\n",
-        "plt.annotate('Vertical intercept = {value:.{digits}E}'.format(value=b, digits=2),\n",
+        "plt.annotate('Vertical intercept = {value:.{digits}E}'.format(value=b, digits=3),\n",
         "             (xpos, ypos[2]), xycoords='axes fraction')\n",
         "\n",
-        "plt.annotate('Error in vertical intercept = {value:.{digits}E}'.format(value=db, digits=2),\n",
+        "plt.annotate('Error in vertical intercept = {value:.{digits}E}'.format(value=db, digits=3),\n",
         "             (xpos, ypos[3]), xycoords='axes fraction')\n",
         "\n",
         "plt.show()"
