--- a/PHSXlab_plotting_template.ipynb
+++ b/PHSXlab_plotting_template.ipynb
@@ -153,16 +153,16 @@
         "\n",
         "plt.errorbar(x, y, yerr=dy, xerr=None, fmt=\"none\") #don't need to plot x error bars\n",
         "\n",
-        "plt.annotate('Slope ({}) = {value:.{digits}E}'.format(slope_units,value=m, digits=3),\n",
+        "plt.annotate('Slope ({}) = {value:.{digits}f}'.format(slope_units,value=m, digits=7),\n",
         "             (xpos, ypos[0]), xycoords='axes fraction')\n",
         "\n",
-        "plt.annotate('Error in Slope ({}) = {value:.{digits}E}'.format(slope_units,value=dm, digits=3),\n",
+        "plt.annotate('Error in Slope ({}) = {value:.{digits}f}'.format(slope_units,value=dm, digits=7),\n",
         "             (xpos, ypos[1]), xycoords='axes fraction')\n",
         "\n",
-        "plt.annotate('Vertical intercept = {value:.{digits}E}'.format(value=b, digits=3),\n",
+        "plt.annotate('Vertical intercept = {value:.{digits}f}'.format(value=b, digits=7),\n",
         "             (xpos, ypos[2]), xycoords='axes fraction')\n",
         "\n",
-        "plt.annotate('Error in vertical intercept = {value:.{digits}E}'.format(value=db, digits=3),\n",
+        "plt.annotate('Error in vertical intercept = {value:.{digits}f}'.format(value=db, digits=7),\n",
         "             (xpos, ypos[3]), xycoords='axes fraction')\n",
         "\n",
         "plt.show()"
